# LatentShaper

./: .gitignore  LICENSE  README.md  __init__.py  config.json  gui_launcher.py  gui_layout.py  gui_workspace.py  main.py  nodes_merging.py  nodes_pipeline.py  pyproject.toml  requirements.txt  run.bat
.github/workflows/: publish_node.yml
core/: advisor.py  checkpoint_merger.py  comfy_utils.py  config.py  configs.py  format_handler.py  io_manager.py  jobs.py  knowledge_base.json  loader.py  logger.py  model_specs.py  naming.py  queue_manager.py  resources.py  structs.py  tensor_processor.py  version.py  workspace.py
core/math/: __init__.py  common.py  filters.py  linalg.py  merging.py  stats.py
core/pipeline/: __init__.py  base.py  operations.py  ops_combine.py
core/pipeline/transform/: __init__.py  bridge.py  extract.py  morph.py  resize.py  utils.py
core/services/: analyzer.py  base.py  extractor.py  merger.py  morpher.py  resizer.py  utils.py
gui/: __init__.py  components.py  context.py
gui/actions/: __init__.py  analysis.py  checkpoint_merge.py  common.py  resources.py  submission.py  workspace.py
gui/tabs/: analyze.py  bridge.py  checkpoint_merge.py  extract.py  merge.py  metadata_tab.py  morph.py  queue_tab.py  resize.py  settings.py  utils.py
